  option \\close_buffer_with_last_view)


The following LyX functions have been changed:

- close-tab-group was renamed to tab-group-close.

- split-view was renamed to view-split.

- break-paragraph was renamed to paragraph-break.

- copy-label-as-reference was renamed to label-copy-as-reference.


The following LyX key bindings have been changed:

- The binding "C-w" was moved from "buffer-close" to "view-close"
  (only in cua.bind).

- sciword.bind was changed significantly (see #8364). The most important
  change is that "math-delim" commands now work under Windows.

The following LyX documents have been moved:

- All thesis template files and the svmult and svmono template files have been
  moved to the examples folder.


The following metadata files have been added to the tarball:

- Linux desktop file specification and scalable icon has been
  included in the tarball.

- AppData file (appdata.xml). It will not be installed by default and
  distribution maintainers need to handle this file themselves.


Changes with respect to external programs and libraries:
--------------------------------------------------------

- LyX now links against libmagic (http://www.darwinsys.com/file/) if it is
  available at compile time. This improves the file format detection of
  included graphics and other files. The old builtin format detection code
  is used if libmagic is not available.

- LyX no longer uses gettext for handling the translation files. This
  especially is an advantage on Windows, where translating strings is faster.

- LyX is not yet supposed to work with Qt5. It is advised to compile and 
  run LyX against Qt 4.8.x. On Windows, Qt 4.8.5 suffers from a bug that 
  breaks the use of shortcuts, so on Windows Qt 4.8.4 is advised.


Known issues in version 2.1.0
-----------------------------

- LyX needs to be run under Python 2 and will not work properly on systems
  where Python 3 is the default binary. See bug #7030 to know how to fix