@@ -616,18 +616,6 @@ void Text::dispatch(Cursor & cur, FuncRequest & cmd)
 		cur.screenUpdateFlags(Update::FitCursor);
 		break;
 
-	case LFUN_INSET_SELECT_ALL:
-		if (cur.depth() == 1 || !cur.selection() || !cur.selBegin().at_begin()
-			  || !cur.selEnd().at_end()) {
-			needsUpdate |= cur.selHandle(false);
-			needsUpdate |= cursorTop(cur);
-			needsUpdate |= cur.selHandle(true);
-			needsUpdate |= cursorBottom(cur);
-		} else
-			cur.undispatched();
-		cur.screenUpdateFlags(Update::FitCursor);
-		break;
-
 	case LFUN_CHAR_FORWARD:
 	case LFUN_CHAR_FORWARD_SELECT:
 		//LYXERR0(" LFUN_CHAR_FORWARD[SEL]:\n" << cur);
@@ -3058,7 +3046,6 @@ bool Text::getStatus(Cursor & cur, FuncRequest const & cmd,
 	case LFUN_INSET_END:
 	case LFUN_INSET_BEGIN_SELECT:
 	case LFUN_INSET_END_SELECT:
-	case LFUN_INSET_SELECT_ALL:
 	case LFUN_PARAGRAPH_UP:
 	case LFUN_PARAGRAPH_DOWN:
 	case LFUN_LINE_BEGIN:
